stylesheets/_modules.scss
/* ... */
.module-sticker-manager__pack-row {
  @include button-reset;

  display: flex;
  flex-direction: row;
  padding: 16px;

  @include light-theme {
    & + & {
      border-top: 1px solid $color-gray-15;
    }
  }

  @include dark-theme {
    & + & {
      border-top: 1px solid $color-gray-75;
    }
  }

  @include keyboard-mode {
    &:focus {
      box-shadow: 0px 0px 0px 2px $color-ultramarine;
    }
  }

  &__cover {
    width: 48px;
    height: 48px;
    object-fit: contain;
  }
  &__cover-placeholder {
    width: 48px;
    height: 48px;
    background: $color-gray-05;
  }

  &__meta {
    flex-grow: 1;
    display: flex;
    flex-direction: column;

    &:not(:first-child) {
      padding: 0 12px;
    }

    &__title {
      flex: 1;
    }

    &__author {
      flex: 1;

      @include light-theme() {
        color: $color-gray-45;
      }

      @include dark-theme() {
        color: $color-gray-25;
      }
    }

    &__blessed-icon {
      @extend %blessed-sticker-pack-icon;
    }
  }

  &__controls {
    flex-shrink: 1;
    display: flex;
    justify-content: center;
    align-items: center;

    &__button {
      background: none;
      border: 0;
      &--menu {
        &::after {
          content: '';
          display: block;
          min-width: 24px;
          min-height: 24px;
          @include light-theme {
            @include color-svg(
              '../images/icons/v2/more-horiz-24.svg',
              $color-gray-60
            );
          }
          @include dark-theme {
            @include color-svg(
              '../images/icons/v2/more-horiz-24.svg',
              $color-gray-25
            );
          }
        }
      }
    }
  }
}

.module-sticker-manager__install-button {
  background: none;
  border: 0;
  color: $color-gray-90;

  @include font-body-1-bold;

  height: 24px;
  background: $color-gray-05;
  border-radius: 12px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 12px;

  @include dark-theme {
    color: $color-gray-05;
    background: $color-gray-75;
  }

  @include mouse-mode {
    outline: none;
  }

  &--blue {
    @include light-theme {
      background: $color-ultramarine;
      color: $color-white;
    }
    @include dark-theme {
      background: $color-ultramarine-light;
      color: $color-white;
    }
  }
}
/* ... */

